<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/userImage"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginTop="10dp"
        android:src="@drawable/golovolomka"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/userNameTextInputLayout"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:hint="@string/user_name_border_hint"
        app:counterEnabled="true"
        app:counterMaxLength="40"
        app:endIconDrawable="@drawable/cancel"
        app:endIconMode="clear_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userImage"
        app:placeholderText="@string/user_name_hint">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/userNameText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:singleLine="true"
            android:textSize="20sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/userPhoneTextInputLayout"
        style="@style/Widget.Material3.TextInputLayout.FilledBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="#BB86FC"
        android:hint="@string/user_phone_number"
        app:counterEnabled="true"
        app:counterMaxLength="15"
        app:layout_constraintTop_toBottomOf="@+id/userNameTextInputLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/userPhoneText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#BB86FC"
            android:inputType="phone" />
    </com.google.android.material.textfield.TextInputLayout>

    <RadioGroup
        android:id="@+id/genderRadioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        app:layout_constraintTop_toBottomOf="@+id/userPhoneTextInputLayout">

        <TextView
            android:id="@+id/textGender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/gender"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <RadioButton
            android:id="@+id/maleRadioButton"
            android:layout_width="wrap_content"
            android:layout_height="64dp"
            android:text="@string/gender_male" />

        <RadioButton
            android:id="@+id/femaleRadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gender_female" />
    </RadioGroup>

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/notificationsSwitch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:buttonTint="@color/turquoise"
        android:text="@string/notifications"
        app:layout_constraintTop_toBottomOf="@id/genderRadioGroup" />

    <com.google.android.material.checkbox.MaterialCheckBox
        android:id="@+id/notificationAuthorizationCheckBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:text="@string/authorizes_on_device"
        app:buttonTint="@color/turquoise"
        app:layout_constraintTop_toBottomOf="@+id/notificationsSwitch" />

    <com.google.android.material.checkbox.MaterialCheckBox
        android:id="@+id/notificationNewProductsCheckBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:text="@string/new_products"
        app:buttonTint="@color/turquoise"
        app:layout_constraintTop_toBottomOf="@+id/notificationAuthorizationCheckBox" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/pointsTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:text="@string/points"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/notificationNewProductsCheckBox"
        app:layout_constraintTop_toBottomOf="@id/notificationNewProductsCheckBox" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/actualPointsTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="10dp"
        android:text="@string/actual_points"
        android:textColor="@color/grey"
        android:textSize="16dp"
        app:layout_constraintEnd_toEndOf="@id/notificationNewProductsCheckBox"
        app:layout_constraintTop_toTopOf="@+id/pointsTextView" />

    <ProgressBar
        android:id="@+id/pointsLinearBar"
        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:indeterminate="false"
        android:maxHeight="10dip"
        android:minHeight="10dip"
        android:progress="44"
        android:progressDrawable="@drawable/progressbar_custom"
        app:layout_constraintTop_toBottomOf="@+id/actualPointsTextView" />

    <Button
        android:id="@+id/saveButton"
        android:enabled="false"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save"
        app:layout_constraintTop_toBottomOf="@+id/pointsLinearBar"
        android:layout_margin="10dp"
        />
</androidx.constraintlayout.widget.ConstraintLayout>